@@ -4,11 +4,15 @@ Changelog
 2.3.2 (unreleased)
 ------------------
 
-- reverted change: refactory nested tal:conditions in ``navigation_recurse.pt``, merged into
+- We can delete a portlet which product has been removed.
+  Manage portlets page is not broken when an inherited portlet is broken.
+  [thomasdesvenain]
+
+- Reverted change: refactory nested tal:conditions in ``navigation_recurse.pt``, merged into
   one tal:condition in ul tag. 
   [maartenkling]
 
-- add contenttype class to the a tag, like navigation
+- Add contenttype class to the a tag, like navigation
   [maartenkling]
 
 - Don't break TinyMCE on editing parent-portlets (fixes http://dev.plone.org/ticket/12899)
